fixing logo on mobile

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -26,6 +26,8 @@ body { -webkit-text-size-adjust: none; }
 
 .logo { vertical-align: middle; margin-right: .3em; max-width: 64px;height: auto; padding: 2px;}
 
+@media screen and (max-width: 736px) { .logo { vertical-align: middle; margin-right: .3em; max-width: 48px;height: auto; padding: 2px;} }
+
 /* Box Model */
 *, *:before, *:after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
